fix bugs when get link

--- a/my_app/templates/my_app/new_search.html
+++ b/my_app/templates/my_app/new_search.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <h5>{{ num_drug }} DDIs have been found!</h5>
+    <h5>{{search | title }}: {{ num_drug }} DDIs have been found!</h5>
 
     <table class="responsive-table striped">
         <thead>
